--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,11 +7,21 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-grid [fixed]="true" >
+    <ion-row class="ion-justify-content-center">
+      <ion-button >
+        <ion-icon src="assets/icon/notas.svg" size="large" slot="icon-only"></ion-icon>
+        
+      </ion-button>
+      <ion-button>1</ion-button>
+      <ion-button>1</ion-button>
+    </ion-row>
+  </ion-grid>
+  <ion-grid [fixed]="true">
+    <ion-row class="ion-justify-content-center">
+      <ion-button>1</ion-button>
+      <ion-button>1</ion-button>
+      <ion-button>1</ion-button>
+    </ion-row>
+  </ion-grid>
 </ion-content>
