--- a/src/app/question/question.page.html
+++ b/src/app/question/question.page.html
@@ -1,6 +1,10 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>Questions</ion-title>
+<!--     Boton para regresar
+ -->    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Preguntas</ion-title>
   </ion-toolbar>
 </ion-header>
 
