--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,21 +7,22 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-grid [fixed]="true" >
-    <ion-row class="ion-justify-content-center">
-      <ion-button >
-        <ion-icon src="assets/icon/notas.svg" size="large" slot="icon-only"></ion-icon>
-        
-      </ion-button>
-      <ion-button>1</ion-button>
-      <ion-button>1</ion-button>
-    </ion-row>
-  </ion-grid>
-  <ion-grid [fixed]="true">
-    <ion-row class="ion-justify-content-center">
-      <ion-button>1</ion-button>
-      <ion-button>1</ion-button>
-      <ion-button>1</ion-button>
-    </ion-row>
-  </ion-grid>
+  <ion-list>
+    <ion-item>
+      <ion-icon aria-hidden="true" name="airplane" slot="start"></ion-icon>
+      <ion-label>Asistencia</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon aria-hidden="true" name="wifi" slot="start"></ion-icon>
+      <ion-label>Notificaciones</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon aria-hidden="true" name="bluetooth" slot="start"></ion-icon>
+      <ion-label>Archivos</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon aria-hidden="true" src="assets/icon/pregunta.svg" slot="start" ></ion-icon>
+      <ion-button fill="clear" [routerLink]="['/question']">Preguntas</ion-button>
+    </ion-item>
+  </ion-list>
 </ion-content>
