--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+     Grupo 
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,15 +9,15 @@
 <ion-content [fullscreen]="true">
   <ion-list>
     <ion-item>
-      <ion-icon aria-hidden="true" name="airplane" slot="start"></ion-icon>
+      <ion-icon aria-hidden="true"  src="assets/icon/asistencia.svg" slot="start"></ion-icon>
       <ion-label>Asistencia</ion-label>
     </ion-item>
     <ion-item>
-      <ion-icon aria-hidden="true" name="wifi" slot="start"></ion-icon>
+      <ion-icon aria-hidden="true" src="assets/icon/Noti.svg" slot="start" ></ion-icon>
       <ion-label>Notificaciones</ion-label>
     </ion-item>
     <ion-item>
-      <ion-icon aria-hidden="true" name="bluetooth" slot="start"></ion-icon>
+      <ion-icon aria-hidden="true" src="assets/icon/file.svg" slot="start" ></ion-icon>
       <ion-label>Archivos</ion-label>
     </ion-item>
     <ion-item>
