Actualización de Url
Se comentaron las url de Raul, Monica y Zarate

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -43,6 +43,15 @@
       <ion-fab-button [routerLink]="['/classroom']">
         <ion-icon name="business-outline"></ion-icon>
       </ion-fab-button>
+      <!-- Tabla major -->
+      <ion-fab-button [routerLink]="['/major']">
+        <ion-icon name="business-outline"></ion-icon>
+      </ion-fab-button>
+      <!-- Tabla subject -->
+      <ion-fab-button [routerLink]="['/subject']">
+        <ion-icon name="business-outline"></ion-icon>
+      </ion-fab-button>
+      
 
     </ion-fab-list>
   </ion-fab>
