--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -10,7 +10,8 @@
   <ion-list>
     <ion-item>
       <ion-icon aria-hidden="true"  src="assets/icon/asistencia.svg" slot="start"></ion-icon>
-      <ion-label>Asistencia</ion-label>
+      
+      <ion-button fill="clear" [routerLink]="['/asistencia']">Asistencia</ion-button>
     </ion-item>
     <ion-item>
       <ion-icon aria-hidden="true" src="assets/icon/Noti.svg" slot="start" ></ion-icon>
