--- a/src/app/asistencia/asistencia.page.html
+++ b/src/app/asistencia/asistencia.page.html
@@ -10,7 +10,7 @@
 
 <ion-content [fullscreen]="true">
   <ion-list lines="inset">
-    <ion-item>
+    <ion-item class="ion-text-wrap">
       <ion-label>Ver asistencia</ion-label>
     </ion-item>
     <ion-item>
