--- a/src/app/lista-codigos/lista-codigos.page.html
+++ b/src/app/lista-codigos/lista-codigos.page.html
@@ -4,7 +4,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>listaCodigos</ion-title>
+    <ion-title>Codigos generados</ion-title>
   </ion-toolbar>
 </ion-header>
 
