--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,50 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
+    <ion-title> Tab 2 </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+<ion-content [fullscreen]="true" class="ion-justify-content-center">
+  <ion-grid>
+    <ion-row class="ion-justify-content-center">
+      <ion-col>
+        <ion-button class="ion-activatable ripple-parent circle" fill="clear">
+          <ion-icon aria-hidden="true"  src="assets/icon/asistencia.svg" size="large"></ion-icon>
+        </ion-button>
+        <ion-label>Label</ion-label>
+      </ion-col>
+      <ion-col>
+       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
+          <ion-icon size="large" name="star"></ion-icon>
+        </ion-button>
+        <ion-label>Label</ion-label>
+      </ion-col>
+      <ion-col>
+       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
+          <ion-icon size="large" name="star"></ion-icon>
+        </ion-button>
+        <ion-label>Label</ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row class="ion-justify-content-center">
+      <ion-col>
+       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
+          <ion-icon size="large" name="star"></ion-icon>
+        </ion-button>
+        <ion-label>Label</ion-label>
+      </ion-col>
+      <ion-col>
+       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
+          <ion-icon size="large" name="star"></ion-icon>
+        </ion-button>
+        <ion-label>Label</ion-label>
+      </ion-col>
+      <ion-col>
+       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
+          <ion-icon size="large" name="star"></ion-icon>
+        </ion-button>
+        <ion-label>Label</ion-label>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
