--- a/src/app/lista-codigos/lista-codigos.page.html
+++ b/src/app/lista-codigos/lista-codigos.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" class="ion-no-border">
   
   <ion-toolbar>
     <ion-buttons slot="start">
@@ -9,9 +9,16 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">listaCodigos</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-list>
+    <ion-item button *ngFor="let codigo of codigos">
+      
+      <ion-label class="ion-text-wrap">
+        <h2>{{codigo.cod_code}}</h2>
+        <h3> {{codigo.tag}} </h3>
+        <p>{{codigo.cod_time}}</p>
+        <p>{{codigo.cod_date | date:'y-MM-dd'}}</p>
+      </ion-label>
+
+    </ion-item>
+  </ion-list>
 </ion-content>
