--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,7 +7,7 @@
 <ion-content [fullscreen]="true" class="ion-justify-content-center">
   <ion-grid>
     <ion-row class="ion-justify-content-center">
-      <ion-col>
+      <ion-col class="">
         <ion-button class="ion-activatable ripple-parent circle" fill="clear">
           <ion-icon aria-hidden="true"  src="assets/icon/asistencia.svg" size="large"></ion-icon>
         </ion-button>
