--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,20 +1,8 @@
-.wrapper {
-    display: flex;
-    flex-wrap: wrap;
+ion-grid{
+ 
 
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-
-    height: 300px;
-    width: 300px;
-
-    margin: 0 auto;
 }
 
-b {
-    width: 100%;
-}
 
 .ripple-parent {
     position: relative;
@@ -23,20 +11,10 @@ b {
     border: 1px solid #ddd;
 }
 
-.rectangle {
-    width: 300px;
-    height: 150px;
-}
-
-.rounded-rectangle {
-    width: 185px;
-    height: 65px;
-    border-radius: 8px;
-}
 
 .circle {
-    width: 90px;
-    height: 90px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
 }
 
@@ -49,6 +27,8 @@ ion-content {
 }
 
 ion-col{
+    width: fit-content;
+    height: fit-content;
     margin-top: 1rem;
     display: flex;
     flex-direction: column;
