--- a/src/app/codigos/codigos.page.scss
+++ b/src/app/codigos/codigos.page.scss
@@ -1,8 +1,28 @@
-ion-item{
+ion-item {
     --background: #F6F6F6;
     margin-top: 1rem;
     margin-left: 1rem;
     margin-right: 1rem;
     border-radius: 4px;
-    --border-color:#F6F6F6;
+    --border-color: #F6F6F6;
+}
+
+
+/* Scoped components require higher specificity to customize */
+ion-searchbar.custom {
+    --background: #F6F6F6;
+    --color: #261b8e8c;
+    --placeholder-color: #261b8e8c;
+    --icon-color: #261b8e8c;
+    --clear-button-color: #fff;
+    box-shadow: none;
+    --border-radius: 14px;
+}
+
+ion-searchbar.ios.custom {
+    --cancel-button-color: #261b8e8c;
+}
+
+ion-searchbar.md.custom {
+    --cancel-button-color: #261b8e8c;
 }
