--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,12 +3,12 @@
 
 /** Ionic CSS Variables **/
 :root {
-	--ion-color-primary: #FF674D;
+	--ion-color-primary: #261b8e8c;
 	--ion-color-primary-rgb: 255,103,77;
 	--ion-color-primary-contrast: #354052;
 	--ion-color-primary-contrast-rgb: 0,0,0;
-	--ion-color-primary-shade: #e05b44;
-	--ion-color-primary-tint: #ff765f;
+	--ion-color-primary-shade: #1909ad8c;
+	--ion-color-primary-tint: #5f4ef88c;
 
 	--ion-color-secondary: #354052;
 	--ion-color-secondary-rgb: 0,0,0;
@@ -68,7 +68,7 @@
    */
 
   body {
-    --ion-color-primary: #FF674D;
+    --ion-color-primary: #261b8e8c;
     --ion-color-primary-rgb: 255,103,77;
     --ion-color-primary-contrast: #354052;
     --ion-color-primary-contrast-rgb: 0,0,0;
