vista generar codigo

--- a/src/app/asistencia/asistencia.page.html
+++ b/src/app/asistencia/asistencia.page.html
@@ -12,6 +12,7 @@
   <ion-list lines="inset">
     <ion-item class="ion-text-wrap">
       <ion-label>Ver asistencia</ion-label>
+      <ion-button fill="clear" [routerLink]="['/lista-asistencia']"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button>
     </ion-item>
     <ion-item>
       <ion-label>Tomar asistencia</ion-label>
