--- a/src/app/codigos/codigos.page.html
+++ b/src/app/codigos/codigos.page.html
@@ -39,7 +39,7 @@
     </ion-fab-button>
     <ion-fab-list side="top">
 
-      <ion-fab-button>
+      <ion-fab-button [routerLink]="['/generar-codigo']">
         <ion-icon name="document" ></ion-icon>
       </ion-fab-button>
     </ion-fab-list>
