--- a/src/app/elim-major/elim-major.page.html
+++ b/src/app/elim-major/elim-major.page.html
@@ -14,4 +14,5 @@
     </ion-item>
   </ion-list>
   <ion-button expand="center"z >Guardar Cambios</ion-button>
+  <ion-button defaultHref="/ruta-anterior" expand="center"z >Cancelar</ion-button>
 </ion-content>
