--- a/src/app/major/major.page.html
+++ b/src/app/major/major.page.html
@@ -38,7 +38,7 @@
 
     <ion-card-content>
       <!-- Añade el contenido de la asignatura aquí si es necesario -->
-      <p>info de la materia</p>
+      <p>info de la Carrera</p>
       <!-- Otros detalles de la asignatura pueden ir aquí -->
     </ion-card-content>
   </ion-card>
