vista lista de aistencia

--- a/src/app/lista-asistencia/lista-asistencia.page.html
+++ b/src/app/lista-asistencia/lista-asistencia.page.html
@@ -10,4 +10,17 @@
 
 <ion-content [fullscreen]="true">
 
+    <ion-list>
+      <ion-item button *ngFor="let asistencia of asistencias" >
+        
+        <ion-label class="ion-text-wrap">
+          <h2>{{asistencia.att_commit}}</h2>
+          <h3> {{asistencia.code}} </h3>
+          <p>{{asistencia.att_time}}</p>
+          <p>{{asistencia.att_date | date:'y-MM-dd'}}</p>
+        </ion-label>
+  
+      </ion-item>
+    </ion-list>
+
 </ion-content>
