--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -9,41 +9,29 @@
     <ion-row class="ion-justify-content-center">
       <ion-col class="">
         <ion-button class="ion-activatable ripple-parent circle" fill="clear">
-          <ion-icon aria-hidden="true"  src="assets/icon/asistencia.svg" size="large"></ion-icon>
+          <ion-icon aria-hidden="true"  src="assets/grupoMenu/asistencia.svg" size="large"></ion-icon>
         </ion-button>
-        <ion-label>Label</ion-label>
+        <ion-label>Asistencia</ion-label>
       </ion-col>
       <ion-col>
        <ion-button class="ion-activatable ripple-parent circle" fill="clear">
-          <ion-icon size="large" name="star"></ion-icon>
+          <ion-icon size="large" src="assets/grupoMenu/notificaciones.svg" size="large"></ion-icon>
         </ion-button>
-        <ion-label>Label</ion-label>
+        <ion-label>Notificaciones</ion-label>
       </ion-col>
       <ion-col>
        <ion-button class="ion-activatable ripple-parent circle" fill="clear">
-          <ion-icon size="large" name="star"></ion-icon>
+          <ion-icon size="large" src="assets/grupoMenu/file.svg" size="large"></ion-icon>
         </ion-button>
-        <ion-label>Label</ion-label>
+        <ion-label>Archivos</ion-label>
       </ion-col>
     </ion-row>
     <ion-row class="ion-justify-content-center">
       <ion-col>
        <ion-button class="ion-activatable ripple-parent circle" fill="clear">
-          <ion-icon size="large" name="star"></ion-icon>
+          <ion-icon size="large" src="assets/grupoMenu/preguntas.svg" size="large"></ion-icon>
         </ion-button>
-        <ion-label>Label</ion-label>
-      </ion-col>
-      <ion-col>
-       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
-          <ion-icon size="large" name="star"></ion-icon>
-        </ion-button>
-        <ion-label>Label</ion-label>
-      </ion-col>
-      <ion-col>
-       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
-          <ion-icon size="large" name="star"></ion-icon>
-        </ion-button>
-        <ion-label>Label</ion-label>
+        <ion-label>Preguntas</ion-label>
       </ion-col>
     </ion-row>
   </ion-grid>
