--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-list>
+  <!-- <ion-list>
     <ion-item>
       <ion-icon aria-hidden="true"  src="assets/icon/asistencia.svg" slot="start"></ion-icon>
       
@@ -25,5 +25,36 @@
       <ion-icon aria-hidden="true" src="assets/icon/pregunta.svg" slot="start" ></ion-icon>
       <ion-button fill="clear" [routerLink]="['/question']">Preguntas</ion-button>
     </ion-item>
-  </ion-list>
+  </ion-list> -->
+  <ion-grid>
+    <ion-row class="ion-justify-content-center">
+      <ion-col class="">
+        <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/asistencia']">
+          <ion-icon aria-hidden="true"  src="assets/grupoMenu/asistencia.svg" size="large"></ion-icon>
+        </ion-button>
+        <ion-label>Asistencia</ion-label>
+      </ion-col>
+      <ion-col>
+       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
+          <ion-icon size="large" src="assets/grupoMenu/notificaciones.svg" size="large"></ion-icon>
+        </ion-button>
+        <ion-label>Notificaciones</ion-label>
+      </ion-col>
+      <ion-col>
+       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
+          <ion-icon size="large" src="assets/grupoMenu/file.svg" size="large"></ion-icon>
+        </ion-button>
+        <ion-label>Archivos</ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row class="ion-justify-content-center">
+      <ion-col>
+       <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/question']">
+          <ion-icon size="large" src="assets/grupoMenu/preguntas.svg" size="large"></ion-icon>
+        </ion-button>
+        <ion-label>Preguntas</ion-label>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
