--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -9,3 +9,37 @@ ion-toolbar{
     border-radius: 4px;
     --border-color:#F6F6F6;
 }
+
+
+
+.ripple-parent {
+    position: relative;
+    overflow: hidden;
+
+    border: 1px solid #ddd;
+}
+
+
+.circle {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+}
+
+ion-content {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+}
+
+ion-col{
+    width: fit-content;
+    height: fit-content;
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+}
