--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -90,7 +90,7 @@
 	--ion-color-text2-tint: #4638bc;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   /*
    * Dark Colors
    * -------------------------------------------
