--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,38 +1,9 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title> Tab 2 </ion-title>
+    <ion-title>Notificaciones</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true" class="ion-justify-content-center">
-  <ion-grid>
-    <ion-row class="ion-justify-content-center">
-      <ion-col class="">
-        <ion-button class="ion-activatable ripple-parent circle" fill="clear">
-          <ion-icon aria-hidden="true"  src="assets/grupoMenu/asistencia.svg" size="large"></ion-icon>
-        </ion-button>
-        <ion-label>Asistencia</ion-label>
-      </ion-col>
-      <ion-col>
-       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
-          <ion-icon size="large" src="assets/grupoMenu/notificaciones.svg" size="large"></ion-icon>
-        </ion-button>
-        <ion-label>Notificaciones</ion-label>
-      </ion-col>
-      <ion-col>
-       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
-          <ion-icon size="large" src="assets/grupoMenu/file.svg" size="large"></ion-icon>
-        </ion-button>
-        <ion-label>Archivos</ion-label>
-      </ion-col>
-    </ion-row>
-    <ion-row class="ion-justify-content-center">
-      <ion-col>
-       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
-          <ion-icon size="large" src="assets/grupoMenu/preguntas.svg" size="large"></ion-icon>
-        </ion-button>
-        <ion-label>Preguntas</ion-label>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <h1>Hola</h1>
 </ion-content>
