--- a/src/app/question/question.page.html
+++ b/src/app/question/question.page.html
@@ -4,40 +4,43 @@
  --> <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Preguntas</ion-title>
+    <ion-title>Dudas y Preguntas</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-card *ngFor="let question of questions">
+  <ion-card *ngFor="let question of questions" class="ic">
+    <ion-img [src]="imagenPath" class="imagecard"></ion-img>
     <ion-card-header>
-      <ion-card-title>{{ question.que_title }}</ion-card-title>
-      <ion-card-subtitle>{{ question.que_description }}</ion-card-subtitle>
-    </ion-card-header>
+      <ion-card-title class ="ictittle">{{ question.que_title }}</ion-card-title>
+      <ion-card-subtitle class="icdesc">{{ question.que_description }}</ion-card-subtitle>
+      <p class="icnameteacher">{{ question.teacher }}</p>
+      <p class="icfecha">{{ question.que_create }}</p>
+      <ion-button class="bottom-right" fill="clear" [routerLink]="['/question-detail', question.que_id]">
+        Ver mas
+        <ion-icon class ="flecha" name="arrow-forward-outline"></ion-icon>
+      </ion-button>
+        
+      
 
-    <ion-card-content>
-      <!-- Añade el contenido de la asignatura aquí si es necesario -->
-      <p>{{ question.teacher }}</p>
-      <p>{{ question.que_create }}</p>
-      <!-- Otros detalles de la asignatura pueden ir aquí -->
-    </ion-card-content>
+    </ion-card-header>
   </ion-card>
 
   <ion-fab slot="fixed" vertical="top" horizontal="end" [edge]="true">
     <!-- Boton principal -->
     <ion-fab-button>
-      <ion-icon name="chevron-down-circle"></ion-icon>
+      <ion-icon name="add-outline"></ion-icon>
     </ion-fab-button>
 
     <ion-fab-list side="bottom">
 
       <!-- Eliminar question -->
       <ion-fab-button (click)="mostrarAlerta()">
-        <ion-icon name="close-outline"></ion-icon>
+        <ion-icon name="chatbox-ellipses-outline"></ion-icon>
       </ion-fab-button>
       <!-- agregar question -->
       <ion-fab-button>
-        <ion-icon name="chatbox-ellipses-outline"></ion-icon>
+        <ion-icon name="close-outline"></ion-icon>
         <ion-action-sheet trigger="open-action-sheet" header="Example header" subHeader="Example subheader"></ion-action-sheet>
       </ion-fab-button>
     
