--- a/src/app/major/major.page.scss
+++ b/src/app/major/major.page.scss
@@ -1,61 +1,60 @@
 /* Estilos para las tarjetas */
 ion-card {
-    background-color:var(--ion-color-primary) ;
-    border-radius: 15px;
-    box-shadow: #187d7b;
-    margin-bottom: 20px;
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-  }
-  
-  ion-card:hover {
-    transform: scale(1.05);
-    box-shadow: var(--ion-color-secondary-shade);
-  }
-  
-  /* Estilos para el contenido de la tarjeta */
-  ion-card-content {
-    padding: 15px;
-  }
-  
-  /* Estilos para los encabezados de las tarjetas */
-  ion-card-header {
-    background-color: var(--ion-color-secondary);
-    border-bottom: var(--ion-color-primary-contrast);
-    padding: 15px;
-  }
+  background-color:var(--ion-color-secondary-tint) ;
+  border-radius: 15px;
+  box-shadow: #187d7b;
+  margin-bottom: 20px;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
 
-  /* Estilos para los títulos y subtítulos de las tarjetas */
+ion-card:hover {
+  transform: scale(1.05);
+  box-shadow: var(--ion-color-secondary-shade);
+}
+
+/* Estilos para el contenido de la tarjeta */
+ion-card-content {
+  padding: 15px;
+}
+
+/* Estilos para los encabezados de las tarjetas */
+ion-card-header {
+  background-color: var(--ion-color-primary-contrast);
+  border-bottom: var(--ion-color-primary-contrast);
+  padding: 15px;
+}
+
+/* Estilos para los títulos y subtítulos de las tarjetas */
 ion-card-title {
-    color: var(--ion-color-primary-contrast); 
-  }
-  
-  ion-card-subtitle {
-    color: var(--ion-color-primary-contrast);
-  }
-  
+  color: var(--ion-color-primary); 
+}
 
-  ion-toolbar {
-    background-color: var(--ion-color-primary);
-    color: var(--ion-color-primary-contrast);
-    border-bottom: 1px solid var(--ion-color-primary-contrast);
-  }
+ion-card-subtitle {
+  color: var(--ion-color-secondary);
+}
 
-  ion-fab-button::part(native) {
-    background-color: var(--ion-color-secondary);
-    box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15);
-    color: var(--ion-color-primary-contrast);
-  }
-  
-  /*ion-fab-button::part(native):hover::after {
-    background-color: #a3e681;
-  }
-  
-  ion-fab-button::part(native):active::after {
-    background-color: #87d361;
-  }*/
-  
-  
-  
- 
 
-  
+ion-toolbar {
+  background-color: var(--ion-color-primary);
+  color: var(--ion-color-primary);
+  border-bottom: 1px solid var(--ion-color-primary-contrast);
+}
+
+ion-fab-button::part(native) {
+  background-color: var(--ion-color-secondary);
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15);
+  color: var(--ion-color-primary-contrast);
+}
+
+/*ion-fab-button::part(native):hover::after {
+  background-color: #a3e681;
+}
+
+ion-fab-button::part(native):active::after {
+  background-color: #87d361;
+}*/
+
+
+
+
+
