--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,32 +1,11 @@
 <ion-header [translucent]="true" class="ion-no-border">
   <ion-toolbar>
-    <ion-title>
-     Grupo 
-    </ion-title>
+    <ion-title> Grupo </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <!-- <ion-list>
-    <ion-item>
-      <ion-icon aria-hidden="true"  src="assets/icon/asistencia.svg" slot="start"></ion-icon>
-      
-      <ion-button fill="clear" [routerLink]="['/asistencia']">Asistencia</ion-button>
-    </ion-item>
-    <ion-item>
-      <ion-icon aria-hidden="true" src="assets/icon/Noti.svg" slot="start" ></ion-icon>
-      <ion-label>Notificaciones</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-icon aria-hidden="true" src="assets/icon/file.svg" slot="start" ></ion-icon>
-      <ion-label>Archivos</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-icon aria-hidden="true" src="assets/icon/pregunta.svg" slot="start" ></ion-icon>
-      <ion-button fill="clear" [routerLink]="['/question']">Preguntas</ion-button>
-    </ion-item>
-  </ion-list> -->
-  <ion-grid>
+  <!-- <ion-grid>
     <ion-row class="ion-justify-content-center">
       <ion-col class="">
         <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/asistencia']">
@@ -55,6 +34,11 @@
         <ion-label>Preguntas</ion-label>
       </ion-col>
     </ion-row>
-  </ion-grid>
-
+  </ion-grid> -->
+  <ion-list *ngFor="let grupo of grupos">
+    <ion-item   >
+      <ion-label>{{grupo.gro_code}}</ion-label>
+      <ion-button fill="clear" [routerLink]="['/grupo-opc', grupo.gro_id]"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button>
+    </ion-item>
+  </ion-list>
 </ion-content>
