--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -43,3 +43,16 @@ ion-col{
     justify-items: center;
     align-items: center;
 }
+
+
+ion-item{
+    --background: #F6F6F6;
+    --margin-top: 14px;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    border-radius: 4px;
+
+    --border-color:#F6F6F6;
+}
+
+
