--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,50 +1,51 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title> Tab 2 </ion-title>
+    <ion-title>
+     Grupo 
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="ion-justify-content-center">
-  <ion-grid>
-    <ion-row class="ion-justify-content-center">
-      <ion-col>
-        <ion-button class="ion-activatable ripple-parent circle" fill="clear">
-          <ion-icon aria-hidden="true"  src="assets/icon/asistencia.svg" size="large"></ion-icon>
-        </ion-button>
-        <ion-label>Label</ion-label>
-      </ion-col>
-      <ion-col>
-       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
-          <ion-icon size="large" name="star"></ion-icon>
-        </ion-button>
-        <ion-label>Label</ion-label>
-      </ion-col>
-      <ion-col>
-       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
-          <ion-icon size="large" name="star"></ion-icon>
-        </ion-button>
-        <ion-label>Label</ion-label>
-      </ion-col>
-    </ion-row>
-    <ion-row class="ion-justify-content-center">
-      <ion-col>
-       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
-          <ion-icon size="large" name="star"></ion-icon>
-        </ion-button>
-        <ion-label>Label</ion-label>
-      </ion-col>
-      <ion-col>
-       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
-          <ion-icon size="large" name="star"></ion-icon>
-        </ion-button>
-        <ion-label>Label</ion-label>
-      </ion-col>
-      <ion-col>
-       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
-          <ion-icon size="large" name="star"></ion-icon>
-        </ion-button>
-        <ion-label>Label</ion-label>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+<ion-content [fullscreen]="true">
+  <ion-list>
+    <ion-item>
+      <ion-icon aria-hidden="true" src="assets/icon/file.svg" slot="start" ></ion-icon>
+      <ion-button fill="clear" [routerLink]="['/notextracurricular']">Eventos</ion-button>
+    </ion-item>
+    <ion-item>
+      <ion-icon aria-hidden="true" src="assets/icon/pregunta.svg" slot="start" ></ion-icon>
+      <ion-button fill="clear" [routerLink]="['/grades']">Calificaciones</ion-button>
+    </ion-item>
+  </ion-list>
+
+  <ion-fab slot="fixed" vertical="top" horizontal="end" [edge]="true">
+    
+    <!-- Boton principal -->
+    <ion-fab-button>
+      <ion-icon name="chevron-down-circle"></ion-icon>
+    </ion-fab-button>
+
+    <ion-fab-list side="bottom">
+      <!-- Botones secundarios -->
+      <!-- Tabla group -->
+      <ion-fab-button [routerLink]="['/group']">
+        <ion-icon name="information-circle-outline"></ion-icon>
+      </ion-fab-button>
+      <!-- Tabla classroom -->
+      <ion-fab-button [routerLink]="['/classroom']">
+        <ion-icon name="business-outline"></ion-icon>
+      </ion-fab-button>
+      <!-- Tabla major -->
+      <ion-fab-button [routerLink]="['/major']">
+        <ion-icon name="business-outline"></ion-icon>
+      </ion-fab-button>
+      <!-- Tabla subject -->
+      <ion-fab-button [routerLink]="['/subject']">
+        <ion-icon name="business-outline"></ion-icon>
+      </ion-fab-button>
+      
+
+    </ion-fab-list>
+  </ion-fab>
+  
 </ion-content>
