--- a/src/app/grupo-opc/grupo-opc.page.html
+++ b/src/app/grupo-opc/grupo-opc.page.html
@@ -1,13 +1,41 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>GrupoOpc</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Grupo {{grupoid}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">GrupoOpc</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-grid>
+    <ion-row class="ion-justify-content-center">
+      <ion-col class="">
+        <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/asistencia', grupoid]">
+          <ion-icon aria-hidden="true"  src="assets/grupoMenu/asistencia.svg" size="large"></ion-icon>
+        </ion-button>
+        <ion-label>Asistencia</ion-label>
+      </ion-col>
+      <ion-col>
+       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
+          <ion-icon size="large" src="assets/grupoMenu/notificaciones.svg" size="large"></ion-icon>
+        </ion-button>
+        <ion-label>Notificaciones</ion-label>
+      </ion-col>
+      <ion-col>
+       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
+          <ion-icon size="large" src="assets/grupoMenu/file.svg" size="large"></ion-icon>
+        </ion-button>
+        <ion-label>Archivos</ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row class="ion-justify-content-center">
+      <ion-col>
+       <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/question']">
+          <ion-icon size="large" src="assets/grupoMenu/preguntas.svg" size="large"></ion-icon>
+        </ion-button>
+        <ion-label>Preguntas</ion-label>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
