--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -5,39 +5,9 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <!-- <ion-grid>
-    <ion-row class="ion-justify-content-center">
-      <ion-col class="">
-        <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/asistencia']">
-          <ion-icon aria-hidden="true"  src="assets/grupoMenu/asistencia.svg" size="large"></ion-icon>
-        </ion-button>
-        <ion-label>Asistencia</ion-label>
-      </ion-col>
-      <ion-col>
-       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
-          <ion-icon size="large" src="assets/grupoMenu/notificaciones.svg" size="large"></ion-icon>
-        </ion-button>
-        <ion-label>Notificaciones</ion-label>
-      </ion-col>
-      <ion-col>
-       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
-          <ion-icon size="large" src="assets/grupoMenu/file.svg" size="large"></ion-icon>
-        </ion-button>
-        <ion-label>Archivos</ion-label>
-      </ion-col>
-    </ion-row>
-    <ion-row class="ion-justify-content-center">
-      <ion-col>
-       <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/question']">
-          <ion-icon size="large" src="assets/grupoMenu/preguntas.svg" size="large"></ion-icon>
-        </ion-button>
-        <ion-label>Preguntas</ion-label>
-      </ion-col>
-    </ion-row>
-  </ion-grid> -->
   <ion-list *ngFor="let grupo of grupos">
     <ion-item   >
-      <ion-label>{{grupo.gro_code}}</ion-label>
+      <ion-label>{{grupo.gro_id}}</ion-label>
       <ion-button fill="clear" [routerLink]="['/grupo-opc', grupo.gro_id]"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button>
     </ion-item>
   </ion-list>
