--- a/src/app/codigos/codigos.page.html
+++ b/src/app/codigos/codigos.page.html
@@ -33,17 +33,10 @@
 
 [routerLink]="['/lista-codigos']"
 -->
-  <ion-fab slot="fixed" vertical="bottom" horizontal="end">
-    <ion-fab-button>
-      <ion-icon name="chevron-up-circle"></ion-icon>
-    </ion-fab-button>
-    <ion-fab-list side="top">
-
-      <ion-fab-button [routerLink]="['/generar-codigo',grupoid]">
-        <ion-icon name="document" ></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
-
-  </ion-fab>
+<ion-fab slot="fixed" vertical="bottom" horizontal="end">
+  <ion-fab-button (click)="new()">
+  <ion-icon name="add"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
   
 </ion-content>
