--- a/src/app/codigos/codigos.page.html
+++ b/src/app/codigos/codigos.page.html
@@ -14,7 +14,7 @@
 
 
 
-  <ion-list>
+  <!-- <ion-list>
     <ion-item button *ngFor="let codigo of codigos" >
       
       <ion-label class="ion-text-wrap">
@@ -25,6 +25,34 @@
       </ion-label>
 
     </ion-item>
+  </ion-list> -->
+
+
+  <ion-list [inset]="true" >
+    <ion-item-sliding button *ngFor="let codigo of codigos">
+      <ion-item [button]="true">
+         
+        <ion-label class="ion-text-wrap">
+          <h2>{{codigo.cod_code}}</h2>
+          <h3> {{codigo.tag}} </h3>
+          <p>{{codigo.cod_time}}</p>
+          <p>{{codigo.cod_date | date:'y-MM-dd'}}</p>
+        </ion-label>
+      </ion-item>
+      <ion-item-options slot="end">
+        <ion-item-option color="warning">
+          <ion-icon slot="icon-only" name="pin"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="tertiary">
+          <ion-icon slot="icon-only" name="share"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="danger" expandable="true">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+
+
   </ion-list>
 
 
