--- a/src/app/group/group.page.html
+++ b/src/app/group/group.page.html
@@ -17,16 +17,16 @@
 
   <ion-grid>
     <!-- Crear una fila por cada elemento --> 
-    <ion-row *ngFor="let group of groups" >
+    <ion-row *ngFor="let grupo of grupos" >
       <!-- Crear columna para el icono-->
-      <ion-col size="1" [routerLink]="['/menu1', group.gro_id, group.subject, group.gro_code]">
+      <ion-col size="1" [routerLink]="['/menu1', grupo.gro_id, grupo.gro_fksubject, grupo.gro_code]">
       <img alt src="https://ionicframework.com/docs/img/demos/card-media.png">
       </ion-col>
       <!-- Crear columna para el texto-->
-      <ion-col [routerLink]="['/menu1', group.gro_id, group.subject, group.gro_code]">
+      <ion-col [routerLink]="['/menu1', grupo.gro_id, grupo.subject, grupo.gro_code]">
         <ion-label>
-          <h2>{{group.subject}} {{group.gro_code}}</h2>
-          <h3>Docente: {{group.teacher}} </h3>
+          <h2>{{grupo.subject}} {{grupo.gro_code}}</h2>
+          <h3>Docente: {{grupo.teacher}} </h3>
         </ion-label>
       </ion-col>
     </ion-row>
