--- a/src/app/menu1/menu1.page.html
+++ b/src/app/menu1/menu1.page.html
@@ -1,33 +1,45 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-<!--     Boton para regresar
- -->    <ion-buttons slot="start">
-  <ion-back-button></ion-back-button>
-</ion-buttons>
-<ion-title>{{ groupData.gro_subject }} {{ groupData.gro_code }}</ion-title>
-  </ion-toolbar>
-</ion-header> 
+<!-- Boton para regresar -->    
+      <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>{{ gruposubject }} {{ grupocode }}</ion-title>
+  </ion-toolbar> 
+</ion-header>
 
 <ion-content [fullscreen]="true">
 
-  <ion-list>
-    <ion-item>
-      <ion-icon aria-hidden="true"  src="assets/icon/asistencia.svg" slot="start"></ion-icon>
-      <ion-label>Asistencia</ion-label>
-    </ion-item> 
-    <ion-item>
-      <ion-icon aria-hidden="true" src="assets/icon/Noti.svg" slot="start" ></ion-icon>
-      <ion-label>Notificaciones</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-icon aria-hidden="true" src="assets/icon/file.svg" slot="start" ></ion-icon>
-      <ion-button fill="clear" [routerLink]="['/library']">Archivos</ion-button>
-    </ion-item>
-    <ion-item>
-      <ion-icon aria-hidden="true" src="assets/icon/pregunta.svg" slot="start" ></ion-icon>
-      <ion-button fill="clear" [routerLink]="['/question']">Preguntas</ion-button>
-    </ion-item>
-  </ion-list>
+  <ion-grid>
+    <ion-row class="ion-justify-content-center">
+      <ion-col class="">
+        <ion-button class="ion-activatable ripple-parent circle" fill="clear">
+          <ion-icon aria-hidden="true"  src="assets/icon/asistencia.svg" size="large"></ion-icon>
+        </ion-button>
+        <ion-label>Asistencia</ion-label>
+      </ion-col>
+      <ion-col>
+       <ion-button class="ion-activatable ripple-parent circle" fill="clear">
+          <ion-icon size="large" src="assets/icon/Noti.svg" size="large"></ion-icon>
+        </ion-button>
+        <ion-label>Notificaciones</ion-label>
+      </ion-col>
+      <ion-col>
+       <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/library', grupoid]">
+          <ion-icon size="large" src="assets/icon/file.svg" size="large"></ion-icon>
+        </ion-button>
+        <ion-label>Archivos</ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row class="ion-justify-content-center">
+      <ion-col>
+       <ion-button class="ion-activatable ripple-parent circle" fill="clear" [routerLink]="['/question']">
+          <ion-icon size="large" src="assets/icon/pregunta.svg" size="large"></ion-icon>
+        </ion-button>
+        <ion-label>Preguntas</ion-label>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
   <ion-fab slot="fixed" vertical="top" horizontal="end" [edge]="true">
     
@@ -47,3 +59,4 @@
   </ion-fab>
 
 </ion-content>
+
