--- a/src/app/detalle-asistencia/detalle-asistencia.page.html
+++ b/src/app/detalle-asistencia/detalle-asistencia.page.html
@@ -22,15 +22,15 @@
         </ion-label>
       </ion-item>
       <ion-item-options slot="end">
-        <ion-item-option color="warning">
-          <ion-icon slot="icon-only" name="pin"></ion-icon>
-        </ion-item-option>
         <ion-item-option color="tertiary">
           <ion-icon slot="icon-only" name="share"></ion-icon>
         </ion-item-option>
         <ion-item-option color="danger" expandable="true">
-          <ion-icon slot="icon-only" name="trash"></ion-icon>
+          <ion-button (click)="alertEliminar(asistencia.att_id)" expand="block" fill="clear" shape="round">
+            <ion-icon slot="icon-only" name="trash"></ion-icon>
+          </ion-button>
         </ion-item-option>
+        
       </ion-item-options>
     </ion-item-sliding>
 
