--- a/src/app/elim-major/elim-major.page.html
+++ b/src/app/elim-major/elim-major.page.html
@@ -1,18 +1,29 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/ruta-anterior"></ion-back-button>
+      <ion-button color="medium" (click)="cancel()">Cancel</ion-button>
     </ion-buttons>
-    <ion-title>Eliminar Carrera</ion-title>
+    <ion-title> Selecciona una carrera</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="guardarDatos()" [strong]="true">Confirm</ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
+    <ion-item>
+      <ion-select label="Elimina Carreras" >
+        <ion-select-option *ngFor="let majors of major" value="carreras">{{ majors.maj_name }}</ion-select-option>
+      </ion-select>
+    </ion-item>
+  </ion-list>
+
+  <!--<ion-list>
     <ion-item *ngFor="let majors of major">
       <ion-checkbox label-placement="stacked" alignment="start">{{ majors.maj_name }}</ion-checkbox>
     </ion-item>
   </ion-list>
   <ion-button expand="center"z >Guardar Cambios</ion-button>
   <ion-button defaultHref="/ruta-anterior" expand="center"z >Cancelar</ion-button>
-</ion-content>
+--></ion-content>
