--- a/src/app/major/major.page.html
+++ b/src/app/major/major.page.html
@@ -16,10 +16,10 @@
       <ion-icon name="chevron-down-circle"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="bottom">
-      <ion-fab-button (click)="mostrarAlerta()">
+      <ion-fab-button (click)="newMajor()">
         <ion-icon name="pencil-outline"></ion-icon>
       </ion-fab-button >
-      <ion-fab-button [routerLink] = "['/elim-major']">
+      <ion-fab-button (click)="elimMajor()">
         <ion-icon name="backspace-outline"></ion-icon>
       </ion-fab-button>
       <ion-fab-button>
@@ -28,12 +28,14 @@
     </ion-fab-list>
   </ion-fab>
 
+  
+
 
   <!-- Utiliza *ngFor para iterar sobre las asignaturas y mostrarlas en tarjetas -->
-  <ion-card *ngFor="let majors of major" (click)="onClickCard()">
+  <ion-card *ngFor="let major of majors" (click)="onClickCard()">
     <ion-card-header>
-      <ion-card-title>{{ majors.maj_name }}</ion-card-title>
-      <ion-card-subtitle>{{ majors.maj_code }}</ion-card-subtitle>
+      <ion-card-title>{{ major.maj_name }}</ion-card-title>
+      <ion-card-subtitle>{{ major.maj_code }}</ion-card-subtitle>
     </ion-card-header>
 
     <ion-card-content>
