adición funcion elimnar

--- a/src/app/major/major.page.html
+++ b/src/app/major/major.page.html
@@ -38,6 +38,8 @@
       <ion-card-subtitle>{{ major.maj_code }}</ion-card-subtitle>
     </ion-card-header>
 
+    <ion-button (click)="alertEliminar(major.maj_name)" color="danger"><ion-icon name="trash"></ion-icon></ion-button>
+
     <ion-card-content>
     </ion-card-content>
   </ion-card>
