--- a/src/app/major/major.page.html
+++ b/src/app/major/major.page.html
@@ -32,13 +32,13 @@
 
 
   <!-- Utiliza *ngFor para iterar sobre las asignaturas y mostrarlas en tarjetas -->
-  <ion-card *ngFor="let major of majors" (click)="onClickCard()">
+  <ion-card *ngFor="let major of majors" >
     <ion-card-header>
       <ion-card-title>{{ major.maj_name }}</ion-card-title>
       <ion-card-subtitle>{{ major.maj_code }}</ion-card-subtitle>
     </ion-card-header>
 
-    <ion-button (click)="alertEliminar(major.maj_name)" color="danger"><ion-icon name="trash"></ion-icon></ion-button>
+    <ion-button (click)="alertEliminar(major.maj_id)" color="danger"><ion-icon name="trash"></ion-icon></ion-button>
 
     <ion-card-content>
     </ion-card-content>
