--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-     Grupo 
+      Grupo 
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -14,7 +14,7 @@
     </ion-item>
     <ion-item>
       <ion-icon aria-hidden="true" src="assets/icon/pregunta.svg" slot="start" ></ion-icon>
-      <ion-button fill="clear" [routerLink]="['/grades']">Calificaciones</ion-button>
+      <ion-button fill="clear" [routerLink]="['/grade']">Calificaciones</ion-button>
     </ion-item>
   </ion-list>
 
@@ -46,6 +46,6 @@
       
 
     </ion-fab-list>
-  </ion-fab>
+  </ion-fab>
   
 </ion-content>
